src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Code__c</fullName>
        <externalId>true</externalId>
        <label>Account Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <description>Account country field configured for demo . A decision will be taken on approach to be used to select country, Geo , region and match it with On premises. This is a temporary field (may be deleted)</description>
        <label>Account Country</label>
        <picklist>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nigeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guadeloupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Caledonia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Geo__c</fullName>
        <description>Account Geo field configured for demo . A decision will be taken on approach to be used to select country, Geo , region and match it with On premises. This is a temporary field (may be deleted)</description>
        <label>Account Geo</label>
        <picklist>
            <controllingField>Account_Country__c</controllingField>
            <picklistValues>
                <fullName>ASMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IJKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Groups__c</fullName>
        <label>Account Groups</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sub_Geo__c</fullName>
        <label>Account Sub Geo</label>
        <picklist>
            <picklistValues>
                <fullName>ASMO 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA 1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Tier__c</fullName>
        <label>Account Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Account Type field to capture account categories.</description>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV/OSV/IBV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ODM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM/LOEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider: Cloud</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Alt_Address_1__c</fullName>
        <description>Alternate language address to be used to enter language other than English.</description>
        <label>Alt  Language Address 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alt_Address_2__c</fullName>
        <description>Alternate language address to be used to enter language other than English.</description>
        <label>Alt  Language Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alt_Language_City__c</fullName>
        <description>Alternate language address to be used to enter language other than English.</description>
        <label>Alt Language City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alt_Language_Postal_Code__c</fullName>
        <description>Alternate language address to be used to enter language other than English.</description>
        <label>Alt Language Postal Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alt_Language_State_Province__c</fullName>
        <description>Alternate language address to be used to enter language other than English.</description>
        <label>Alt Language State/Province</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alt_Language_country__c</fullName>
        <description>Alternate language address to be used to enter language other than English.</description>
        <label>Alt Language country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Language_Name__c</fullName>
        <label>Alternate Language Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Account__c</fullName>
        <formula>NOT(ISBLANK(CIM_ID__c))</formula>
        <label>Approved Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Division__c</fullName>
        <label>Business Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buying_Model__c</fullName>
        <label>Buying Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIM_Gold_Status__c</fullName>
        <description>CIM gold status ID, field to be populated by CIM system .</description>
        <label>CIM Gold Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIM_ID__c</fullName>
        <externalId>true</externalId>
        <label>CIM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIM_Intel_Ultimate_ID__c</fullName>
        <description>CIM Intel Ultimate ID field to be populated by CIM system.</description>
        <label>Intel Ultimate ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIM_Intel_Ultimate_Name__c</fullName>
        <description>CIM Intel Ultimate Name field to be populated by CIM.</description>
        <label>CIM Intel Ultimate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNDA_Number__c</fullName>
        <label>CNDA Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPM_ID__c</fullName>
        <description>Customer Profile Master ID  field to be populated by CPM system.</description>
        <label>CPM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Relationship__c</fullName>
        <inlineHelpText>Describe the nature of Intel’s relationship with the customer and any other parties involved</inlineHelpText>
        <label>Customer Relationship</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to Deactivate an account .</description>
        <label>Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivation_Reason__c</fullName>
        <description>Field to capture reasons for deactivating an account.</description>
        <label>Deactivation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Duplicate Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company no longer exists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied Party List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export Control</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Direct_Sale__c</fullName>
        <inlineHelpText>Will Intel make sales directly to customer</inlineHelpText>
        <label>Direct Sale</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domestic_Ultimate_DUNS__c</fullName>
        <description>Field Domestic Ultimate DUNS will be used for territory management. It captures information from CIM. Read only field in sfdc.</description>
        <label>Domestic Ultimate DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fully_Executed_NDA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Compliance Requirement</description>
        <inlineHelpText>Is the fully executed NDA attached to the Account’s notes and attachments section</inlineHelpText>
        <label>Fully Executed NDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_DUNS__c</fullName>
        <description>This field will be used to capture Global Ultimate DUNS from CIM. It will be used for territory management .This will be read only field in sfdc.</description>
        <label>Global Ultimate DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_Indicator__c</fullName>
        <description>This field will capture Global Ultimate Indicator from CIM. It will be used for territory management . It will be read only in sfdc.</description>
        <label>Global Ultimate Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headquarter_Parent_DUNS__c</fullName>
        <description>Field to capture Headquarter Parent DUNS from CIM . This field  will be used for territory management.</description>
        <label>Headquarter Parent DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Priority_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag high priority accounts for the support team (e.g., show as high priority if there are hot deals, opportunities in final stages, etc.)

REQ: AM-15</description>
        <label>High Priority Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITP_ID__c</fullName>
        <label>ITP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITP__c</fullName>
        <description>Field to capture Accounts&apos;s membership program level.</description>
        <label>ITP Program Membership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Duplicate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicator to duplicat account</description>
        <inlineHelpText>Use this field to identify an account that may be a duplicate of this account.</inlineHelpText>
        <label>Duplicate Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Parent__c</fullName>
        <formula>ISBLANK( Parent.Name )</formula>
        <label>Is Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Military_Aerospace_and_Government__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the field for  Military , Aerospace &amp; Government account</inlineHelpText>
        <label>Military Aerospace and Government</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_an_Embargoed_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Compliance Requirement</description>
        <label>Not an Embargoed Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_on_Denied_Persons_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not on Denied Persons List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Revenue_for_Account__c</fullName>
        <description>Summary of Revenue of all the Opportunities</description>
        <inlineHelpText>Summary of Revenue of all the Opportunities</inlineHelpText>
        <label>Opportunity Revenue for Account</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partner_Alliance_Program__c</fullName>
        <inlineHelpText>Select Intel Programs for Aliiance  Partners</inlineHelpText>
        <label>Partner Alliance Program</label>
        <picklist>
            <picklistValues>
                <fullName>ISA Co-Selling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISA Member</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Physical_Location__c</fullName>
        <inlineHelpText>Please provide physical location of the customer where you are doing the business  like country , city etc.</inlineHelpText>
        <label>Physical Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Line_2__c</fullName>
        <description>Line 2 of Primary Address - Required field</description>
        <label>AddrLine2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_City__c</fullName>
        <description>Required field - Primary Address&apos;s City</description>
        <label>P_City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_State__c</fullName>
        <description>State of the primary address</description>
        <label>P_State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Street__c</fullName>
        <label>P_Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Zip_Code__c</fullName>
        <description>Zip Code for Primary Address</description>
        <label>P_Zip/Postal Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Segment__c</fullName>
        <description>Sales segment field to be used to identify various business segments which are using this account.</description>
        <label>Sales Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Embedded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3SO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Secondary_City__c</fullName>
        <description>City of secondary Address</description>
        <label>Secondary City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_State__c</fullName>
        <description>Secondary Address - Address Line 1</description>
        <label>Secondary State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Street__c</fullName>
        <description>Address Line 1 of Secondary Address</description>
        <label>Secondary Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Zip_Code__c</fullName>
        <description>Zip Code of Secondary Address</description>
        <label>Secondary Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Description__c</fullName>
        <description>Description of Territory</description>
        <label>Territory Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Territory_ID__c</fullName>
        <description>The ID of a Territory. This will be populated via integration</description>
        <label>Territory ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Parent_Account_Name__c</fullName>
        <label>Test Parent Account Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Sales_Segment__c</columns>
        <columns>Account_Country__c</columns>
        <columns>Account_Geo__c</columns>
        <columns>Account_Tier__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Is_Parent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>GE_Healthcare_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>GE Health</value>
        </filters>
        <label>GE Healthcare Accounts</label>
    </listViews>
    <listViews>
        <fullName>List_of_NAR_INF_Ent_Retail_Industry</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>Account_Geo__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.SALES</columns>
        <columns>Territory_Description__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory_Description__c</field>
            <operation>contains</operation>
            <value>NAR INFL Retail</value>
        </filters>
        <label>List of NAR INF Ent Retail Industry</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <validationRules>
        <fullName>Account_Owner</fullName>
        <active>false</active>
        <errorConditionFormula>Owner.FirstName &lt;&gt; &apos;Oliver&apos;</errorConditionFormula>
        <errorMessage>You can&apos;t update the Account Owner</errorMessage>
    </validationRules>
</CustomObject>